# ddg_predictor

./: .gitignore  NOTES.md  README.md  pyproject.toml
platform/: README.md
platform/frontend/: README.md
src/: __init__.py  cli.py  constants.py  types.py  utils.py
src/data/: __init__.py  dataset.py  interface_graph.py  pdb_utils.py  prepare.py
src/eval/: metrics.py
src/models/: __init__.py  ig_ddg.py
src/train/: engine.py  losses.py
tests/: helpers.py  test_interface_graph.py  test_metrics_and_audit.py  test_model_forward.py  test_training.py
