[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddg_predictor"
version = "0.1.0"
description = "Interface-centric ddG modeling with IG-DDG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
ddg-cli = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.data", "src.models", "src.train", "src.eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
